--- a/deploy/media-server/templates/sabnzbd.yaml
+++ b/deploy/media-server/templates/sabnzbd.yaml
@@ -50,7 +50,7 @@ spec:
         - name: app-template.controllers.main.initContainers.config-fix.image.tag
           value: 3.19.1
         - name: app-template.controllers.main.initContainers.config-fix.command
-          value: \["sh", "-c", 'if test -f /config/sabnzbd.ini; then sed -i "s/^host_whitelist.*/host_whitelist = $HOSTNAME/" /config/sabnzbd.ini; fi'\]
+          value: ["sh", "-c", 'if test -f /config/sabnzbd.ini; then sed -i "s/^host_whitelist.*/host_whitelist = $HOSTNAME/" /config/sabnzbd.ini; fi']
         - name: app-template.controllers.main.initContainers.config-fix.env.HOSTNAME
           value: sabnzbd.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
         - name: app-template.controllers.main.initContainers.config-fix.securityContext.readOnlyRootFilesystem
