--- a/deploy/media-server/templates/bazarr.yaml
+++ b/deploy/media-server/templates/bazarr.yaml
@@ -37,7 +37,7 @@ spec:
         - name: application.group
           value: Media
         - name: application.icon
-          value: simple-icons:subtitles
+          value: subtitles
         - name: application.image
           value: 'https://www.bazarr.media/assets/img/logo.png'
         - name: application.description
