--- a/deploy/cluster/templates/cluster-hajimari.yaml
+++ b/deploy/cluster/templates/cluster-hajimari.yaml
@@ -29,7 +29,7 @@ spec:
         - name: media.nfs.path
           value: {{ .Values.media.nfs.path }}
         - name: hajimari.globalBookmarks
-          value: |
+          value:
             - group: Communicate
               bookmarks:
                 - name: Discord
