--- a/deploy/cluster/templates/cluster-hajimari-apps.yaml
+++ b/deploy/cluster/templates/cluster-hajimari-apps.yaml
@@ -79,12 +79,12 @@ spec:
 apiVersion: hajimari.io/v1alpha1
 kind: Application
 metadata:
-  name: switch2
+  name: poe-switch
   namespace: hajimari
 spec:
   name: PoE switch
   group: Infrastructure
   icon: material-symbols:switch
-  url: http://switch2.{{ .Values.cluster.top_level_domain }}
+  url: http://poe-switch.{{ .Values.cluster.top_level_domain }}
   info: Manage Router
   targetBlank: true
