--- a/charts/hajimari/values.yaml
+++ b/charts/hajimari/values.yaml
@@ -61,6 +61,9 @@ hajimari:
     showAppInfo: true
     showAppUrls: false
     showBookmarkGroups: true
+    showGlobalBookmarks: true
+    alwaysTargetBlank: false
+    showAppUrls: true
     targetBlank: false
     name: "friend"
     namespaceSelector:
