--- a/deploy/cluster/templates/nmstate-config.yaml
+++ b/deploy/cluster/templates/nmstate-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-nmstate-config
+  name: nmstate-config
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
