--- a/deploy/cluster/templates/nmstate-operator.yaml
+++ b/deploy/cluster/templates/nmstate-operator.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-nmstate-operator
+  name: nmstate-operator
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
