--- a/charts/hajimari/Chart.yaml
+++ b/charts/hajimari/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 description: A Helm chart to install hajimari.
-name: home-hajimari
+name: hajimari
 version: 0.1.0
 kubeVersion: ">=1.22.0-0"
 maintainers:
