--- a/deploy/dev/templates/home-hajimari.yaml
+++ b/deploy/dev/templates/home-hajimari.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: home-hajimari
+  name: hajimari
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
