--- a/charts/democratic-csi/values.yaml
+++ b/charts/democratic-csi/values.yaml
@@ -76,7 +76,7 @@ democratic-csi:
 
         # MUST ensure uniqueness
         # full iqn limit is 223 bytes, plan accordingly
-        namePrefix: "openshift-1-"
+        namePrefix: "openshift-"
         nameSuffix: ""
 
         # documented below are several blocks
