--- a/deploy/cluster/templates/cert-manager-operator.yaml
+++ b/deploy/cluster/templates/cert-manager-operator.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-metallb-config
+  name: cert-manager-operator
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -11,17 +11,10 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/metallb-config
+    path: charts/cert-manager-operator
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
-      parameters:
-        - name: network.startIP
-          value: {{ .Values.network.startIP }}
-        - name: network.endIP
-          value: {{ .Values.network.endIP }}
-        - name: network.plexIP
-          value: {{ .Values.network.plexIP }}
   syncPolicy:
     automated:
       selfHeal: true
