--- a/deploy/cluster/templates/certificates.yaml
+++ b/deploy/cluster/templates/certificates.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: media-gaps
+  name: certificates
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: gaps
+    namespace: default
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/gaps
+    path: charts/certificates
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
@@ -22,15 +22,16 @@ spec:
           value: {{ .Values.cluster.name }}
         - name: cluster.admin_email
           value: {{ .Values.cluster.admin_email }}
-        - name: app-template.controllers.main.containers.main.env.TZ
-          value: {{ .Values.cluster.timezone }}
-        - name: media.nfs.server
-          value: {{ .Values.media.nfs.server }}
-        - name: media.nfs.path
-          value: {{ .Values.media.nfs.path }}
+        - name: issuer
+          value: {{ .Values.certificates.issuer }}
+        - name: aws.region
+          value: {{ .Values.certificates.aws.region }}
+        - name: aws.hosted_zone_id
+          value: {{ .Values.certificates.aws.hosted_zone_id }}
+        - name: aws.access_key_id
+          value: {{ .Values.certificates.aws.access_key_id }}
+        - name: aws.secret_access_key
+          value: {{ .Values.certificates.aws.secret_access_key }}
   syncPolicy:
     automated:
-      prune: true
       selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
