--- a/deploy/cluster/templates/hajimari-apps.yaml
+++ b/deploy/cluster/templates/hajimari-apps.yaml
@@ -68,7 +68,7 @@ spec:
   group: Infrastructure
   icon: material-symbols:switch
   url: http://switch.{{ .Values.cluster.top_level_domain }}
-  info: Manage Router
+  info: Manage switch
 ---
 apiVersion: hajimari.io/v1alpha1
 kind: Application
@@ -80,4 +80,4 @@ spec:
   group: Infrastructure
   icon: material-symbols:switch
   url: http://poe-switch.{{ .Values.cluster.top_level_domain }}
-  info: Manage Router
+  info: Manage switch
