--- a/charts/custom-error-pages/templates/kustomize-ingresscontroller.yaml
+++ b/charts/custom-error-pages/templates/kustomize-ingresscontroller.yaml
@@ -1,9 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
-resources:
-  - customer-error-code-pages.yaml
-
+metadata:
+  name: kustomize-ingresscontroller
 patches:
   - target:
       kind: IngressController
