--- a/deploy/cluster/templates/custom-error-code-pages.yaml
+++ b/deploy/cluster/templates/custom-error-code-pages.yaml
@@ -11,7 +11,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/certificates
+    path: charts/custom-error-code-pages
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
