--- a/kustomizations/custom-error-code-pages/kustomization.yaml
+++ b/kustomizations/custom-error-code-pages/kustomization.yaml
@@ -7,7 +7,7 @@ patches:
       kind: IngressController
       name: default
       namespace: openshift-ingress-operator
-  - patch: |-
+    patch: |-
       - op: add
         path: /spec/httpErrorCodePages
         value:
