--- a/kustomizations/custom-error-code-pages/kustomization.yaml
+++ b/kustomizations/custom-error-code-pages/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
   name: kustomize-ingresscontroller
+resources:
+  - custom-error-code-pages.yaml
 patches:
   - target:
       kind: IngressController
