--- a/charts/nmstate-config/values.yaml
+++ b/charts/nmstate-config/values.yaml
@@ -1,1 +1,19 @@
----
+network:
+  master-0:
+    storage-interface:
+      name: enp2s0
+    storage-ip:
+      ip: 10.0.0.1
+      prefix-length: 24
+  master-1:
+    storage-interface:
+      name: enp2s0
+    storage-ip:
+      ip: 10.0.0.2
+      prefix-length: 24
+  master-2:
+    storage-interface:
+      name: enp2s0
+    storage-ip:
+      ip: 10.0.0.3
+      prefix-length: 24
