--- a/charts/nmstate-config/values.yaml
+++ b/charts/nmstate-config/values.yaml
@@ -1,19 +1,22 @@
 network:
-  master-0:
-    storage-interface:
+  node0:
+    name: master-0
+    storageInterface:
       name: enp2s0
-    storage-ip:
+    storageIp:
       ip: 10.0.0.1
       prefix-length: 24
-  master-1:
-    storage-interface:
+  node1:
+    name: master-1
+    storageInterface:
       name: enp2s0
-    storage-ip:
+    storageIp:
       ip: 10.0.0.2
       prefix-length: 24
-  master-2:
-    storage-interface:
+  node2:
+    name: master-2
+    storageInterface:
       name: enp2s0
-    storage-ip:
+    storageIp:
       ip: 10.0.0.3
       prefix-length: 24
