--- a/deploy/cluster/templates/nmstate-config.yaml
+++ b/deploy/cluster/templates/nmstate-config.yaml
@@ -16,12 +16,30 @@ spec:
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
       parameters:
+        - name: network.node0.name
+          value: {{ .Values.network.node0.name }}
         - name: network.node0.storageIp.ip
           value: {{ .Values.network.node0.storageIp.ip }}
+        - name: network.node0.storageIp.prefixLength
+          value: {{ .Values.network.node0.storageIp.prefixLength }}
+        - name: network.node0.storageInterface.name
+          value: {{ .Values.network.node0.storageInterface.name }}
+        - name: network.node1.name
+          value: {{ .Values.network.node1.name }}
         - name: network.node1.storageIp.ip
           value: {{ .Values.network.node1.storageIp.ip }}
+        - name: network.node1.storageIp.prefixLength
+          value: {{ .Values.network.node1.storageIp.prefixLength }}
+        - name: network.node1.storageInterface.name
+          value: {{ .Values.network.node1.storageInterface.name }}
+        - name: network.node2.name
+          value: {{ .Values.network.node2.name }}
         - name: network.node2.storageIp.ip
           value: {{ .Values.network.node2.storageIp.ip }}
+        - name: network.node2.storageIp.prefixLength
+          value: {{ .Values.network.node2.storageIp.prefixLength }}
+        - name: network.node2.storageInterface.name
+          value: {{ .Values.network.node2.storageInterface.name }}
   syncPolicy:
     automated:
       selfHeal: true
