--- a/deploy/cluster/values.yaml
+++ b/deploy/cluster/values.yaml
@@ -52,18 +52,18 @@ network:
       name: enp2s0
     storageIp:
       ip: 10.0.0.1
-      prefixLength: 24
+      prefixLength: "24"
   node1:
     name: master-1
     storageInterface:
       name: enp2s0
     storageIp:
       ip: 10.0.0.2
-      prefixLength: 24
+      prefixLength: "24"
   node2:
     name: master-2
     storageInterface:
       name: enp2s0
     storageIp:
       ip: 10.0.0.3
-      prefixLength: 24
+      prefixLength: "24"
