--- a/deploy/cluster/values.yaml
+++ b/deploy/cluster/values.yaml
@@ -29,8 +29,10 @@ democratic-csi:
       iscsi:
         targetPortal: 'my-server[:port]'
 
-config:
-  storageClassName: "synology-iscsi"
+backup:
+  nfs:
+    server: my-nas
+    path: /my-backups
 
 network:
   node0:
