--- a/charts/k10-kasten-config/templates/k10.yaml
+++ b/charts/k10-kasten-config/templates/k10.yaml
@@ -18,6 +18,6 @@ spec:
     mode: airgap
   route:
     enabled: true
-    host: k10.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
+    # host: k10.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}
     tls:
       enabled: true
