--- a/deploy/cluster/templates/amd-gpu-operator.yaml
+++ b/deploy/cluster/templates/amd-gpu-operator.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-amd-gpu-operator-operator
+  name: cluster-amd-gpu-operator
   namespace: openshift-gitops
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -11,7 +11,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/amd-gpu-operator-operator
+    path: charts/amd-gpu-operator
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
