--- a/charts/kubevirt-hyperconverged-operator/Chart.yaml
+++ b/charts/kubevirt-hyperconverged-operator/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 description: A Helm chart to install the kubevirt.
-name: kubevirt-hyperconverged
+name: kubevirt-hyperconverged-operator
 version: 0.1.3
 kubeVersion: ">=1.22.0-0"
 maintainers:
