openshift haji link

--- a/deploy/cluster/templates/hajimari-apps.yaml
+++ b/deploy/cluster/templates/hajimari-apps.yaml
@@ -1,6 +1,18 @@
 apiVersion: hajimari.io/v1alpha1
 kind: Application
 metadata:
+  name: openshift
+  namespace: hajimari
+spec:
+  name: OpenShift
+  group: Infrastructure
+  icon: simple-icons:redhatopenshift
+  url: http://console-openshift-console.{{ .Values.cluster.top_level_domain }}/dashboards
+  info: OpenShift console
+---
+apiVersion: hajimari.io/v1alpha1
+kind: Application
+metadata:
   name: nas
   namespace: hajimari
 spec:
