--- a/deploy/cluster/templates/hajimari-apps.yaml
+++ b/deploy/cluster/templates/hajimari-apps.yaml
@@ -7,7 +7,7 @@ spec:
   name: OpenShift
   group: Infrastructure
   icon: simple-icons:redhatopenshift
-  url: http://console-openshift-console.{{ .Values.cluster.top_level_domain }}/dashboards
+  url: http://console-openshift-console.apps.{{ .Values.cluster.name }}.{{ .Values.cluster.top_level_domain }}/dashboards
   info: OpenShift console
 ---
 apiVersion: hajimari.io/v1alpha1
