--- a/deploy/utilities/templates/changedetection.yaml
+++ b/deploy/utilities/templates/changedetection.yaml
@@ -61,17 +61,12 @@ spec:
         - name: app-template.persistence.config.existingClaim
           value: cyberchef-config
         - name: app-template.persistence.config.globalMounts[0].path
-          value: /config
+          value: /datastore
 
         - name: app-template.defaultPodOptions.labels.app
           value: cyberchef
         - name: app-template.defaultPodOptions.labels.version
           value: 10.18.6
-
-        - name: app-template.defaultPodOptions.securityContext.runAsUser
-          value: "0"
-        - name: app-template.defaultPodOptions.securityContext.runAsGroup
-          value: "0"
 
   syncPolicy:
     automated:
