--- a/roles/base-cluster/Chart.yaml
+++ b/roles/base-cluster/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 description: A Helm chart to bootstrap the cluster.
-name: bootstrap
+name: base-cluster
 version: 0.1.0
 kubeVersion: ">=1.22.0-0"
 maintainers:
